[tool.poetry]
name = "gptoolkit"
version = "0.1.0"
description = ""
authors = ["Roshan Nanu <roshan.nanu@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.26.5"
keyring = "^23.13.1"
click = "^8.1.3"
sqlalchemy = "^2.0.3"


[tool.poetry.group.dev.dependencies]
ipython = "^8.10.0"
furo = "^2022.12.7"
sphinx = "^6.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
